# camera-roll-sounds-api

./: .boilersync  .gitignore  CLAUDE.md  README.md  pyproject.toml
camera_roll_sounds_api/camera_roll_sounds/: models.py  tests.py  urls.py  views.py
camera_roll_sounds_api/camera_roll_sounds/migrations/: 0002_generationjob_used_free_generation_and_more.py  0003_generationjob_audio_storage_key.py
camera_roll_sounds_api/camera_roll_sounds/tasks/: generate_audio.py
its_now_api/: installed_apps.py  package_apps.py
its_now_api/its_now/: .boilersync  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
its_now_api/its_now/management/commands/: test_generate.py
its_now_api/its_now/migrations/: 0001_initial.py
its_now_api/its_now/services/: __init__.py  audio_generator.py  image_processor.py
its_now_api/its_now/tasks/: generate_audio.py
